# sct

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  Dockerfile  README.md  REUSE.toml  cliff.toml  compose.hub.yaml  compose.yaml  flake.nix  install.ps1  install.sh  mkdocs.yml
.devcontainer/: Dockerfile  data-volume-readme.md
.githooks/: pre-commit
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: auto-tag.yml  ci.yml  deploy-docs-to-ghpages.yml  nix.yml  publish-aur.yml  release.yml
assets/: index.html
bench/: README.md  bench.sh  conformance.sh
bench/fixtures/conformance/: errors.tsv  lookup.tsv  subsumes.tsv  translate.tsv  validate-code.tsv  valueset-validate.tsv
bench/lib/: fhir.sh  local.sh  report.sh  timing.sh
bench/operations/: ancestors.sh  bulk.sh  children.sh  lookup.sh  search.sh  subsumption.sh
benches/: fst_bench.rs
benchmarks/: README.md  bench.sh  conformance-ci.sh  conformance.sh  ecl_bench.rs  fst_bench.rs  load.sh  profile.sh
benchmarks/fixtures/: concepts.txt
benchmarks/fixtures/conformance/: expand.tsv  translate.tsv
benchmarks/fixtures/conformance-ci/: errors.tsv  expand.tsv  lookup.tsv  subsumes.tsv  validate-code.tsv  valueset-validate.tsv
benchmarks/lib/: report.sh
benchmarks/operations/: ancestors.sh  bulk.sh  children.sh  lookup.sh  search.sh  subsumption.sh
codelists/: mmr-vaccination-procedures.codelist
docker/: caddy-entrypoint.sh  entrypoint.sh
docs/: benchmarks.md  claude-conversation-pacharanero-sct.md  fhir-conformance-benchmarks.md  gps-ips.md  index.md  path-resolution.md  terminology-server.md  uk-edition-structure.md  vector-search-landscape.md  why-build-this.md  why-codelists.md
docs/commands/: codelist.md  completions.md  crosswalk.md  diagram.md  diff.md  dmwb.md  ecl.md  embed.md  fst.md  gui.md  info.md  lexical.md  lookup.md  map.md  markdown.md  mcp.md  ndjson.md  parquet.md  paths.md  read2.md  refset.md  sayt.md  semantic.md  serve.md  size.md  sqlite.md  tct.md  transcode.md  trud.md  tui.md
docs/deploy/: docker-image.md  index.md  terminology-server.md
docs/dmwb/: read-v2-item9.md  walkthrough.md
docs/stylesheets/: extra.css
docs/walkthrough/: everything-else.md  getting-started.md  index.md  interactive-uis.md  parquet-duckdb.md  refsets-codelists.md  semantic-llm.md  transitive-closure.md
docs/why/: why-codelists.md
s/: docs  install  snowstorm-lite  version++
spec/: README.md  bench.md  cross-terminology-mapping.md  deployment.md  ecl.md  path-resolution.md  roadmap.md  spec.md
spec/commands/: diagram.md  ecl-compress.md  embed.md  fst.md  serve.md  static.md  trud.md
specs/: README.md  bench.md  cross-terminology-mapping.md  ecl.md  fst.md  library-rs.md  path-resolution.md  queries.md  roadmap.md  spec.md
specs/commands/: diagram.md  ecl-compress.md  fst.md  serve.md  static.md  trud.md
src/: builder.rs  format.rs  lib.rs  main.rs  output.rs  paths.rs  progress.rs  provenance.rs  rf2.rs  schema.rs
src/commands/: codelist.rs  completions.rs  crosswalk.rs  diagram.rs  diff.rs  dmwb.rs  ecl.rs  embed.rs  fst.rs  gui.rs  info.rs  lexical.rs  lookup.rs  map.rs  markdown.rs  mcp.rs  mod.rs  ndjson.rs  parquet.rs  paths.rs  read2.rs  refset.rs  sayt.rs  semantic.rs  size.rs  sqlite.rs  tct.rs  transcode.rs  trud.rs  tui.rs
src/commands/serve/: fhir.rs  mod.rs  ops.rs  pool.rs  valuesets.rs
src/ecl/: ast.rs  compress.rs  eval.rs  lex.rs  mod.rs  parse.rs
src/index/: build.rs  format.rs  mod.rs  normalise.rs  query.rs
tests/: builder_records.rs  cli.rs  codelist_compose.rs  completions.rs  ecl_eval.rs  embed_semantic.rs  end_to_end.rs  fst_index.rs  rf2_parsing.rs  serve.rs  snapshots.rs  transcode.rs  trud_api.rs
tests/fixtures/rf2/: README.md  generate.py
tests/fixtures/rf2/SnomedCT_SyntheticTest_PRODUCTION_20260101T120000Z/Snapshot/Refset/Content/: der2_Refset_SimpleSnapshot_SYN_20260101.txt  der2_cRefset_AssociationSnapshot_SYN_20260101.txt
tests/fixtures/rf2/SnomedCT_SyntheticTest_PRODUCTION_20260101T120000Z/Snapshot/Refset/Language/: der2_cRefset_LanguageSnapshot-en_SYN_20260101.txt
tests/fixtures/rf2/SnomedCT_SyntheticTest_PRODUCTION_20260101T120000Z/Snapshot/Refset/Map/: der2_iisssciRefset_ExtendedMapSnapshot_SYN_20260101.txt  der2_sRefset_SimpleMapSnapshot_SYN_20260101.txt
tests/fixtures/rf2/SnomedCT_SyntheticTest_PRODUCTION_20260101T120000Z/Snapshot/Terminology/: sct2_Concept_Snapshot_SYN_20260101.txt  sct2_Description_Snapshot-en_SYN_20260101.txt  sct2_Relationship_Snapshot_SYN_20260101.txt
tests/snapshots/: snapshots__diff_one_inactivated.snap  snapshots__info_ndjson.snap  snapshots__trud_list.snap
