# SPDX-FileCopyrightText: 2026 Marcus Baw and Baw Medical Ltd
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "sct-rs"
version = "0.18.0"
edition = "2021"
description = "Local-first SNOMED CT toolchain: RF2 → NDJSON, SQLite, Parquet, Markdown, Arrow embeddings, and MCP server"
license = "AGPL-3.0-or-later"
repository = "https://github.com/pacharanero/sct"
homepage = "https://github.com/pacharanero/sct"
readme = "README.md"
keywords = ["snomed", "healthcare", "terminology", "fhir", "mcp"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "sct"
path = "src/main.rs"

# cargo-binstall: tell `cargo binstall sct-rs` where to find our prebuilt
# release tarballs so it can skip compiling from source. Release artefacts
# are named with human-friendly OS-and-arch slugs (e.g. sct-linux-x86_64)
# rather than Rust target triples, so we override pkg-url per target.
[package.metadata.binstall]
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/sct-linux-x86_64.tar.gz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/sct-linux-x86_64.tar.gz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/sct-linux-aarch64.tar.gz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/sct-linux-aarch64.tar.gz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/sct-macos-aarch64.tar.gz"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/sct-macos-x86_64.tar.gz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/sct-windows-x86_64.zip"
pkg-fmt = "zip"

# Debian/Ubuntu .deb packaging (cargo-deb). Built from the static musl binary,
# so there are no runtime dependencies (`depends = ""`). `license` and the crate
# description are inherited from [package]. Asset paths use `target/release/`;
# cargo-deb rewrites them for the `--target` triple.
[package.metadata.deb]
name = "sct"
maintainer = "Marcus Baw <marcus@bawmedical.co.uk>"
copyright = "2026 Marcus Baw and Baw Medical Ltd"
license-file = ["LICENSE", "0"]
extended-description = """\
Local-first SNOMED CT toolchain. Convert an RF2 release into a canonical NDJSON \
artefact and derive SQLite (+FTS5), Parquet, Markdown, and Arrow embeddings from \
it. Includes lexical and FST search, an ECL engine, clinical code lists, an MCP \
server, and a FHIR R4 terminology server."""
section = "science"
priority = "optional"
depends = ""
assets = [
    ["target/release/sct", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/sct/README.md", "644"],
]

# Fedora/RHEL/openSUSE .rpm packaging (cargo-generate-rpm). `auto-req = "no"`
# because the static musl binary has no dynamic library requirements. `summary`,
# `license`, and `version` are read from [package]. Requires a prior
# `cargo build --release --target <triple>`.
[package.metadata.generate-rpm]
name = "sct"
auto-req = "no"
assets = [
    { source = "target/release/sct", dest = "/usr/bin/sct", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/sct/README.md", mode = "644" },
]

[features]
default = ["serve"]
tui = ["dep:ratatui", "dep:crossterm"]
gui = ["dep:axum", "dep:tokio", "dep:open"]
serve = ["dep:axum", "dep:tokio"]
# `sct dmwb` - import NHS Data Migration Workbench .mdb cross-maps (Read v2 etc.)
# via the pure-Rust jetdb Access reader. Optional: most users only need the
# RF2-native maps from `sct ndjson --refsets all`.
dmwb = ["dep:jetdb"]
full = ["tui", "gui", "serve"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
csv = "1"
anyhow = "1"
walkdir = "2"
zip = "8"
tempfile = "3"
indexmap = { version = "2", features = ["serde"] }
fst = { version = "0.4", features = ["levenshtein"] }
memmap2 = "0.9"
unicode-normalization = "0.1"
rusqlite = { version = "0.40", features = ["bundled"] }
parquet = { version = "59", features = ["arrow"] }
arrow = { version = "59", default-features = false, features = ["ipc"] }
indicatif = "0.18"
ureq = { version = "3", features = ["json"] }
sha2 = "0.11"
toml = "1.1"
serde_yaml_ng = "0.10"
chrono = { version = "0.4.44", default-features = false, features = ["std", "clock"] }

# Optional: sct tui
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }

# Optional: sct gui and sct serve (axum + tokio are shared by both)
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"], optional = true }
open = { version = "5", optional = true }

# Optional: sct dmwb - pure-Rust Microsoft Access (.mdb) reader
jetdb = { version = "0.3", optional = true }

# NOTE: keep this table LAST among dependency tables, and keep it to genuinely
# unix-only deps. A TOML table runs until the next [header], so anything added
# below it silently becomes unix-only - exactly how axum/tokio ended up
# unavailable on Windows and broke the v0.17.0 release build there.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "fst_bench"
path = "benchmarks/fst_bench.rs"
harness = false

[[bench]]
name = "ecl_bench"
path = "benchmarks/ecl_bench.rs"
harness = false

# Optimised build that keeps debug symbols, so a sampling profiler (perf +
# flamegraph) or valgrind/callgrind shows real function names instead of `??`.
# Build/run with: `cargo build --profile profiling` /
# `cargo flamegraph --profile profiling ...`. See benchmarks/profile.sh.
[profile.profiling]
inherits = "release"
debug = true          # line-level DWARF; does not affect codegen/opt-level
strip = false
